# backend/docs/swagger.json
@@ -715,6 +715,12 @@
                 "name": {
                     "type": "string"
                 },
+                "product_categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ProductCategory"
+                    }
+                },
                 "start_at": {
                     "type": "string"
                 }
@@ -756,6 +762,9 @@
                     "type": "number"
                 },
                 "product_category_id": {
+                    "type": "string"
+                },
+                "product_category_name": {
                     "type": "string"
                 }
             }
